changed information table width and fix button visibility on mobile phones

--- a/src/components/ControlPanel/ControlPanelLayout/ControlPanelLayout.scss
+++ b/src/components/ControlPanel/ControlPanelLayout/ControlPanelLayout.scss
@@ -13,4 +13,8 @@
 	&:hover {
 		transform: scale(1.05);
 	}
+	
+	@include mobile-s {
+		margin-bottom: rem(90);
+	}
 }
